# kopete-whiteboard

./: CMakeLists.txt  Messages.sh  README  kopete_whiteboard.desktop  kopete_whiteboard.kcfg  kopete_whiteboard.kcfgc  kopete_whiteboard_config.desktop  palettewidget.cpp  palettewidget.h  wbitems.cpp  wbitems.h  wbscene.cpp  wbscene.h  wbwidget.cpp  wbwidget.h  whiteboardchatui.rc  whiteboarddialog.cpp  whiteboarddialog.h  whiteboardguiclient.cpp  whiteboardguiclient.h  whiteboardplugin.cpp  whiteboardplugin.h  whiteboardpreferences.cpp  whiteboardpreferences.h  whiteboardprefs.ui  whiteboardview.ui
icons/: .directory
icons/whiteboarding/: .directory
